--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,10 @@
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
-    "mongoose": "^9.2.2"
+    "groq-sdk": "^0.37.0",
+    "mongoose": "^9.2.2",
+    "multer": "^2.1.0",
+    "pdf-parse": "^1.1.1"
   },
   "description": "",
   "devDependencies": {
